<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="franhida.pruebat2pablohidalgomartinez.MyLogin">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iVSplashScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="500dp"
        android:layout_marginEnd="100dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="50dp"
        android:src="@mipmap/fox" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="300dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tIETUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/usernameLogin" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="400dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tIETPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passwordLogin" />
    </android.support.design.widget.TextInputLayout>

    <ImageView
        android:id="@+id/ivUsernameLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="320dp"
        android:src="@drawable/person_icon_24dp" />

    <ImageView
        android:id="@+id/ivPasswordLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textInputLayout2"
        android:layout_alignStart="@+id/ivUsernameLogin"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="420dp"
        android:src="@drawable/pwd_icon_24dp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textInputLayout2"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="500dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/buttonLogin"
        android:textColor="@android:color/background_light" />
</FrameLayout>
